Title Schedule page
Add a Title to the schedule page.

--- a/data/index.html
+++ b/data/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css"/>
   </head>
   <body>
+  <h1>Schedule</h1>
     <div id="schedule"> </div>
     <button id="saveSchedule">Save Schedule</button>
     
