--- a/data/index.html
+++ b/data/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/ico" href="/favicon.ico"/>
-    <title>TacoGenie Schedule Configuration</title>
-    <link rel="stylesheet" href="main.css"/>
-  </head>
-  <body>
-  <h1>Schedule</h1>
-    <div id="schedule"> </div>
-    <button id="saveSchedule">Save Schedule</button>
-    
-    <script src="moment.js"></script>
-    <script src="momentTimezone.js"></script>
+    <title>TacoGenie Scheduler</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+<body>
+    <h1>TacoGenie Scheduler</h1>
+    <div id="statusSection">
+        <h2>Current Status: <span id="currentStatus">Loading...</span></h2>
+        <p>Next Event: <span id="nextEvent">Loading...</span></p>
+    </div>
+    <div id="actionButtons">
+        <button onclick="window.location.href='schedule.html';">Set Schedule</button>
+        <button onclick="window.location.href='vacation.html';">Set Vacation Mode</button>
+    </div>
+
     <script src="main.js"></script>
-  </body>
+</body>
 </html>
 
