--- a/data/vacation.html
+++ b/data/vacation.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Vacation Mode Settings</title>
 <link rel="stylesheet" href="vacation.css">
 </head>
@@ -20,7 +21,8 @@
         </div>
         <button type="button" onclick="submitVacationModeSettings()">Set Vacation Period</button>
         <button type="button" onclick="clearVacationModeSettings()">Clear Vacation Period</button>
-    </form>
+    </form><p>
+    <button onclick="window.location.href='/';">Home</button>
 
     <script src="vacation.js"></script>
 </body>
